kubernetes/media/ca.yml
apiVersion: v1
kind: Service
metadata:
  name: certificate-authority
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 8443
      name: https
  selector:
    app: certificate-authority

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: certificate-authority
  namespace: media
  labels:
    app: certificate-authority
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: certificate-authority
  template:
    metadata:
      labels:
        app: certificate-authority
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
      imagePullSecrets:
        - name: regcred
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 172.16.1.2
      volumes:
        - name: step-ca
          persistentVolumeClaim:
            claimName: certificate-authority
        - name: ca-password
          secret:
            secretName: certificate-authority-password
      containers:
        - name: certificate-authority
          image: docker.io/zevrant/step-ca:latest
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: step-ca
              mountPath: /opt/step-ca
            - name: ca-password
              mountPath: /var/zevrant-services/ca-password
